--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
   late!" But when the Rabbit actually took a watch out of its waistcoat-pocket and looked at it and then hurried on, Alice started to her feet, for it flashed across her
   mind that she had never before seen a rabbit with either a waistcoat-pocket, or a watch to take out of it, and, burning with curiosity, she ran across the field after 
   it and was just in time to see it pop down a large rabbit-hole, under the hedge. In another moment, down went Alice after it!</p>
-  <h2>Lecture Days, Time and Place:</h2>
-  <p>Tuesdays from 6:25pm to 9:05pm in Retaliatta Rm. 258</p>
+  <h2><em>Peter Pan</em>, by J. M. Barrie</h2>
+  <p>All children, except one, grow up. They soon know that they will grow up, and the way Wendy knew was this. One day when she was two years old she was playing in a
+  garden, and she plucked another flower and ran with it to her mother. I suppose she must have looked rather delightful, for Mrs. Darling put her hand to her heart and
+  cried, "Oh, why can't you remain like this for ever!" This was all that passed between them on the subject, but henceforth Wendy knew that she must grow up. You always
+  know after you are two. Two is the beginning of the end.</p>
+  <p>Of course they lived at 14 [their house number on their street], and until Wendy came her mother was the chief one. She was a lovely lady, with a romantic mind and
+  such a sweet mocking mouth. Her romantic mind was like the tiny boxes, one within the other, that come from the puzzling East, however many you discover there is always
+  one more; and her sweet mocking mouth had one kiss on it that Wendy could never get, though there it was, perfectly conspicuous in the right-hand corner.</p>
   <h2>Course Catalog Description:</h2>
   <div class="b">This course will cover the creation of Web pages and sites using HTML, CSS, Javascript and graphical applications. 
   Networked multimedia distribution technologies are also explored. The design of effective Web site including page layout, user interface design, graphic design, 
