--- a/index.html
+++ b/index.html
@@ -41,11 +41,17 @@
   <p>Of course they lived at 14 [their house number on their street], and until Wendy came her mother was the chief one. She was a lovely lady, with a romantic mind and
   such a sweet mocking mouth. Her romantic mind was like the tiny boxes, one within the other, that come from the puzzling East, however many you discover there is always
   one more; and her sweet mocking mouth had one kiss on it that Wendy could never get, though there it was, perfectly conspicuous in the right-hand corner.</p>
-  <h2>Course Catalog Description:</h2>
-  <div class="b">This course will cover the creation of Web pages and sites using HTML, CSS, Javascript and graphical applications. 
-  Networked multimedia distribution technologies are also explored. The design of effective Web site including page layout, user interface design, graphic design, 
-  content flow and site structure as well as management of Web site resources including intranet management and design considerations are addressed. Students design 
-  and create a major Web site with multiple pages and cross-linked structures. <strong>Prerequisites</strong>: [none]<strong>Credit</strong>: 2-2-3 Semester Hours</div>
+  <h2><em>The Wonderful Wizard of Oz</em>, by L. Frank Baum</h2>
+  <p>Dorothy lived in the midst of the great Kansas prairies, with Uncle Henry, who was a farmer, and Aunt Em, who was the farmer's wife.  Their house was small, for the
+  lumber to build it had to be carried by wagon many miles.  There were four walls, a floor and a roof, which made one room; and this room contained a rusty looking 
+  cookstove, a cupboard for the dishes, a table, three or four chairs, and the beds.  Uncle Henry and Aunt Em had a big bed in one corner, and Dorothy a little bed in
+  another corner.  There was no garret at all, and no cellar--except a small hole dug in the ground, called a cyclone cellar, where the family could go in case one of 
+  those great whirlwinds arose, mighty enough to crush any building in its path.  It was reached by a trap door in the middle of the floor, from which a ladder led down
+  into the small, dark hole.</p>
+  <p>When Dorothy stood in the doorway and looked around, she could see nothing but the great gray prairie on every side.  Not a tree nor a house broke the broad sweep of
+  flat country that reached to the edge of the sky in all directions.  The sun had baked the plowed land into a gray mass, with little cracks running through it.  Even
+  the grass was not green, for the sun had burned the tops of the long blades until they were the same gray color to be seen everywhere.  Once the house had been painted,
+  but the sun blistered the paint and the rains washed it away, and now the house was as dull and gray as everything else.</p>
   <h2>Course Outcomes:</h2>
   <p>Students completing this course will be able to:</p>
   <ul>
