--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   flat country that reached to the edge of the sky in all directions.  The sun had baked the plowed land into a gray mass, with little cracks running through it.  Even
   the grass was not green, for the sun had burned the tops of the long blades until they were the same gray color to be seen everywhere.  Once the house had been painted,
   but the sun blistered the paint and the rains washed it away, and now the house was as dull and gray as everything else.</p>
+  <h2>Text excerpts from: <a href="http://www.gutenberg.org">Project Gutenberg</a></h2>
   <h2>Course Outcomes:</h2>
   <p>Students completing this course will be able to:</p>
   <ul>
