adding the unordered list at the end to finish up

--- a/index.html
+++ b/index.html
@@ -53,21 +53,10 @@
   the grass was not green, for the sun had burned the tops of the long blades until they were the same gray color to be seen everywhere.  Once the house had been painted,
   but the sun blistered the paint and the rains washed it away, and now the house was as dull and gray as everything else.</p>
   <h3>Text excerpts from: <a href="http://www.gutenberg.org">Project Gutenberg</a></h3>
-  <h2>Course Outcomes:</h2>
-  <p>Students completing this course will be able to:</p>
   <ul>
-	 <li>Recognize HTML, CSS and JavaScript mark-up and code in a web page/application.</li>
-	 <li>Select the proper mark-up tags or code to achieve a particular result.</li>
-	 <li>Identify improperly used mark-up and code.</li>
-	 <li>Produce modern standards compliant web pages.</li>
-	 <li>Deploy web pages to a public server.</li>
-  </ul>
-  <h2>Course Objectives:</h2>
-  <p>At the conclusion of this course, each successful student will able to:</p>
-  <ul>
-	 <li>Explain the client and server architecture of the Internet and related web technologies.</li>
-	 <li>Use a basic text editor and other software tools to create web pages using HTML, CSS, JavaScript, jQuery, and images.</li>
-	 <li>Deploy web pages to a Linux-based web server using sftp.</li>
+	 <li><strong>Ana Rosiles</strong></li>
+	 <li><strong>ITMD-361</strong></li>
+	 <li><strong>Lab 3</strong></li>
   </ul>
 </body>
 </html>
